# MisspelledGenerator

./: LICENSE.md  README.md  pyproject.toml
src/misspell/: __init__.py  misspell.py
