[project]
name = "misspelled_generator"
version = "1.0.0"
authors = [
  { name="Mjho Nguyen", email="ngminhhoang1412@gmail.com" },
]
description = "This is a python library to generate slightly misspelled words compared to the original ones (currently works only on Latin alphabet)"
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ngminhhoang1412/MisspelledGenerator"
"Bug Tracker" = "https://github.com/ngminhhoang1412/MisspelledGenerator/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

